Edit README for Ex1
Signed-off-by: Vinh Nguyen <vinhdeka@gmail.com>

--- a/Linear-Regression/README
+++ b/Linear-Regression/README
@@ -1,1 +1,2 @@
-This is the results of Linear Regression Exercise
+# This is the result of Linear Regression Exercise
+My github link: https://github.com/truongvinh97/Machine-Learning/tree/master/Linear-Regression
