--- a/Linear-Regression/Ex1_Linear_Regression.ipynb
+++ b/Linear-Regression/Ex1_Linear_Regression.ipynb
@@ -18,7 +18,7 @@
     "## Table of contents\n",
     "* [1. Plotting the data](#C1)\n",
     "* [2. Gradient Descent](#C2)\n",
-    "    * [2.1. Equations](#C2.1)\n",
+    "    * [2.1. Equations](Ex1_Linear_Regression.ipynb#C2_1)\n",
     "    * [2.2. Implementation](#C2.2)\n",
     "    * [2.3. Cost function $J(\\theta)$](#C2.3)\n",
     "    * [2.4. Gradient Descents](#C2.4)\n",
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1. Equations <a class=\"anchor\" id=\"C2.1\"></a>\n",
+    "### 2.1. Equations <a id='C2_1'></a>\n",
     "The hypothesis of linear regression is:\n",
     "$$h_{\\theta}(x)=\\theta_{0} + \\theta_{1} x_{1}$$\n",
     "The objective of linear regression is to minimize the cost function (Root Mean Square Error RMSE):\n",
@@ -201,6 +201,11 @@
     "\n",
     "Note: $\\Sigma$ (with $i=1$ to $m$)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
