Create Exercise 2 of Linear Regression: Multi-variable
Signed-off-by: Vinh Nguyen <vinhdeka@gmail.com>

--- a/Linear-Regression/Ex1_Linear_Regression.ipynb
+++ b/Linear-Regression/Ex1_Linear_Regression.ipynb
@@ -553,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, ($\\theta_{0},\\theta_{1}$) = [[98.24832962],[0.10976774]] => This result is approx my result"
+    "So, ($\\theta_{0},\\theta_{1}$) = [[98.24832962],[0.10976774]] => This result is approx the result of Gradient Descent Equations"
    ]
   }
  ],
